fix(tree): Click margin-top zoom will collapse treemenu(#559) (#568)

--- a/packages/theme/src/tree/index.less
+++ b/packages/theme/src/tree/index.less
@@ -199,6 +199,7 @@
 .@{tree-node-prefix-cls} {
   white-space: nowrap;
   outline: 0;
+  overflow: hidden;
 
   // 连接线
   &.show-line {
